# src/backend/controllers/spotify-api.js
@@ -1,10 +1,10 @@
-const has = require('has-keys');
-const CodeError = require('../CodeError');
-const { PrismaClient } = require('@prisma/client');
+const has = require("has-keys");
+const CodeError = require("../CodeError");
+const { PrismaClient } = require("@prisma/client");
 const prisma = new PrismaClient();
 let token = undefined;
 const { CLIENTID, CLIENTSECRET, DEFAULT_PLAYLIST_ID } = process.env;
-const { getSpotifyToken } = require('../utils/spotify-token');
+const { getSpotifyToken } = require("../utils/spotify-token");
 
 module.exports = {
   async searchApi(req, res) {
@@ -19,9 +19,9 @@ module.exports = {
       schema: { $name: 'A blessing' }
     }
     */
-    console.log('res0', res.headersSent);
-    if (!has(req.body, ['name']))
-      throw new CodeError('The song name is missing', 400);
+    console.log("res0", res.headersSent);
+    if (!has(req.body, ["name"]))
+      throw new CodeError("The song name is missing", 400);
     const songName = req.body.name;
 
     // Retrieve spotify token if undefined
@@ -35,10 +35,10 @@ module.exports = {
       songName
     )}&type=track&market=FR&limit=10`;
     const requestOptions = {
-      method: 'GET',
+      method: "GET",
       headers: {
         Authorization: `Bearer ${token}`,
-        'Content-Type': 'application/json',
+        "Content-Type": "application/json",
       },
     };
 
@@ -49,23 +49,23 @@ module.exports = {
       // If access_token is invalid, renw it
       if (resultPromise.status === 401) {
         const newToken = await getSpotifyToken(CLIENTID, CLIENTSECRET);
-        console.log('INFO Spotify access token renewal:', newToken);
+        console.log("INFO Spotify access token renewal:", newToken);
 
         const newRequestOptions = {
-          method: 'GET',
+          method: "GET",
           headers: {
             Authorization: `Bearer ${newToken}`,
-            'Content-Type': 'application/json',
+            "Content-Type": "application/json",
           },
         };
 
         // Issue song request with new token
         const newResponse = await fetch(url, newRequestOptions);
-        console.log('DEBUG Spotify track request:', newResponse);
+        console.log("DEBUG Spotify track request:", newResponse);
 
         if (newResponse.ok) {
           const accepted = newResponse.json();
-          console.log('Accepted:', accepted);
+          console.log("Accepted:", accepted);
           token = accepted.access_token;
         } else {
           res.status(400).json({
@@ -98,15 +98,15 @@ module.exports = {
     #swagger.tags = ['Export']
     #swagger.summary = 'Export songs of the specified playlist to a default collaborative playlist.'
     #swagger.parameters['playlistid'] = {
-      in: 'path',
+      in: 'query',
       description: 'Id of the playlist',
       required: true,
-      type: 'int'
+      type: 'integer'
     }
     */
-    if (!has(req.params, ['playlistid']))
-      throw new CodeError('The playlistid is missing', 400);
-    console.log('PLAYLIST EXPORT');
+    if (!has(req.params, ["playlistid"]))
+      throw new CodeError("The playlistid is missing", 400);
+    console.log("PLAYLIST EXPORT");
     const playlistid = parseInt(req.params.playlistid);
     // Retrieve spotify token if undefined
     if (token === undefined)
@@ -133,25 +133,36 @@ module.exports = {
       },
     });
     songs.forEach((s) => uris.push(s.song.uri));
-    console.log('All songs from playlist', songs);
-    console.log('All uris from playlist', uris);
+    console.log("All songs from playlist", songs);
+    console.log("All uris from playlist", uris);
 
     const requestOptions = {
-      method: 'POST',
+      method: "POST",
       headers: {
         Authorization: `Bearer ${token}`,
-        'Content-Type': 'application/json',
+        "Content-Type": "application/json",
       },
       body: JSON.stringify(uris),
     };
-    console.log('Spotify request:', requestOptions);
+    console.log("Spotify request:", requestOptions);
     const created = await fetch(url, requestOptions);
-    console.log('Result:', created);
+    console.log("Result:", created);
     if (created.status === 201) {
-      res.status(201).json({ message: 'Songs exported' });
+      res.status(201).json({ message: "Songs exported" });
     } else {
-      res.status(500).json({ message: 'Songs could not be exported' });
+      res.status(500).json({ message: "Songs could not be exported" });
       console.log(await created.json());
     }
+    /*
+    #swagger.responses[201] = {
+      description: 'Songs exported.',
+    }
+    #swagger.responses[500] = {
+      description: 'Export failed.',
+      schema: {
+        message: 'Songs could not be exported',
+      }
+    }
+    */
   },
 };
